complete feature add new task

--- a/todo-list/src/index.css
+++ b/todo-list/src/index.css
@@ -33,3 +33,10 @@ body {
 	font-size: 16px;
 	line-height: 1;
 }
+#root {
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	overflow: hidden;
+}
